--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -24,7 +24,7 @@ const menu = {
 // Common base classes
 const baseClasses = {
   nav: "nav-links flex w-full justify-center gap-6 max-md:gap-3 max-md:py-6 font-queensides-bold text-xl",
-  link: "px-2 py-2 transition-all hover:text-mint-300 max-md:mx-auto max-md:w-full max-md:px-6 max-md:py-2 ",
+  link: "px-2 py-2 transition-all hover:text-mint-300 max-md:mx-auto max-md:w-full max-md:px-6 max-md:py-2 font-queensides-bold text-xl",
   socialContainer: "flex items-center justify-center gap-5 md:hidden",
   dropdown: "relative group flex items-center",
   dropdownMenu:
